@@ -46,6 +46,8 @@ lib/SPVM/Net/SSLeay/X509_STORE.c
 lib/SPVM/Net/SSLeay/X509_STORE.config
 lib/SPVM/Net/SSLeay/X509_STORE.pm
 lib/SPVM/Net/SSLeay/X509_STORE.spvm
+lib/SPVM/Net/SSLeay/X509_STORE_CTX.pm
+lib/SPVM/Net/SSLeay/X509_STORE_CTX.spvm
 lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.c
 lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.config
 lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.pm
