@@ -1,0 +1,24 @@
+package SPVM::Net::SSLeay::X509_STORE_CTX;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::X509_STORE_CTX - X509_STORE_CTX
+
+=head1 Description
+
+Net::SSLeay::X509_STORE_CTX class in L<SPVM> represents C<X509_STORE_CTX> structure in OpenSSL.
+
+=head1 Usage
+
+  use Net::SSLeay::X509_STORE_CTX;
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
